--- a/readme
+++ b/readme
@@ -2,7 +2,7 @@ Buenas! como va equipo de coder?
 
 Dudas: 
 + Me gustaria saber si me faltó algo para agregar y si estan bien puestas las anotaciones (ctrl K + ctrl C)
-+ Tambien tengo la duda de por que pasa que cuando termino toda la "encuesta" de los prompts, recien ahi se pone el texto <h1> en HTML 
++ Tambien tengo la duda de por que pasa que cuando termino toda la "encuesta" de los prompts, recien ahi aparece el texto <h1> en HTML (en algunas veces) ... quizas sea por el live server, pero probé desactivandolo y no hay caso. 
 
 critica constructiva: 
 + me gustaria que nos enseñen muchos mas atajos del teclado :D
